# AItoy-date-planning

./: .env.example  ALEMBIC_GUIDE.md  DATABASE_GUIDE.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_SCHEMA.md  NEON_POSTGRESQL_MIGRATION.md  README.md  alembic.ini  create_image.py  init_migration.sh  pyproject.toml  test_boardgame_search.py  test_hil.py  test_kakao_search.py  test_kakao_simple.py  test_natural_language.py  test_server.py  trip_planner.db
.claude/commands/: go.md  lint.md  migrate.md  plan.md  refactor.md  server.md  test.md
.claude/skills/frontend-developer/: SKILL.md
.claude/skills/frontend-developer/references/: api-integration.md  component-templates.md
.claude/skills/readme-writer/: SKILL.md
.claude/skills/readme-writer/references/: section-templates.md
alembic/: env.py
alembic/versions/: 0f02a1063bcc_initial_schema_user_workflow_node_.py  c6de243cef31_remove_date_theme_column.py  efe5ca4e190f_convert_pk_to_uuid.py
src/: agent.py  database.py  db_logger.py  example_db_usage.py  graph.py  kakao_client.py  main.py  models.py  nodes.py  server.py  state.py  time_calculator.py
src/seoul_trip_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
